parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    A1
    A2
    A3
    COMMENTARY
    DISTINCT
    EQUALS_EQUALS
    LESS_EQUAL
    LESS_THAN
    MORE_EQUAL
    MORE_THAN

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> var_assign
Rule 3     calc -> empty
Rule 4     var_assign -> LET VARIABLE EQUALS expression PyC
Rule 5     var_assign -> LET VARIABLE EQUALS VARIABLE
Rule 6     empty -> <empty>
Rule 7     expression -> OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
Rule 8     expression -> OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
Rule 9     expression -> OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
Rule 10    expression -> OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
Rule 11    expression -> OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
Rule 12    expression -> OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
Rule 13    expression -> INT
Rule 14    expression -> BOOLEAN

Terminals, with rules where they appear

A1                   : 
A2                   : 
A3                   : 
BOOLEAN              : 14
CLOSE_P              : 7 8 9 10 11 12
COMMA                : 7 7 8 8 9 9 10 10 11 11 12 12
COMMENTARY           : 
DISTINCT             : 
DIVIDE               : 10
EQUALS               : 4 5
EQUALS_EQUALS        : 
EXP                  : 11
INT                  : 13
INT_DIV              : 9
LESS_EQUAL           : 
LESS_THAN            : 
LET                  : 4 5
MINUS                : 8
MORE_EQUAL           : 
MORE_THAN            : 
MULTIPLY             : 12
OPEN_P               : 7 8 9 10 11 12
OPERA                : 7 8 9 10 11 12
PLUS                 : 7
PyC                  : 4
VARIABLE             : 4 5 5
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 3
expression           : 1 4 7 7 8 8 9 9 10 10 11 11 12 12
var_assign           : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . var_assign
    (3) calc -> . empty
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN
    (4) var_assign -> . LET VARIABLE EQUALS expression PyC
    (5) var_assign -> . LET VARIABLE EQUALS VARIABLE
    (6) empty -> .

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7
    LET             shift and go to state 8
    $end            reduce using rule 6 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    var_assign                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .

    $end            reduce using rule 1 (calc -> expression .)


state 3

    (2) calc -> var_assign .

    $end            reduce using rule 2 (calc -> var_assign .)


state 4

    (3) calc -> empty .

    $end            reduce using rule 3 (calc -> empty .)


state 5

    (7) expression -> OPERA . OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> OPERA . OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> OPERA . OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> OPERA . OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> OPERA . OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> OPERA . OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P

    OPEN_P          shift and go to state 9


state 6

    (13) expression -> INT .

    $end            reduce using rule 13 (expression -> INT .)
    PyC             reduce using rule 13 (expression -> INT .)
    COMMA           reduce using rule 13 (expression -> INT .)
    CLOSE_P         reduce using rule 13 (expression -> INT .)


state 7

    (14) expression -> BOOLEAN .

    $end            reduce using rule 14 (expression -> BOOLEAN .)
    PyC             reduce using rule 14 (expression -> BOOLEAN .)
    COMMA           reduce using rule 14 (expression -> BOOLEAN .)
    CLOSE_P         reduce using rule 14 (expression -> BOOLEAN .)


state 8

    (4) var_assign -> LET . VARIABLE EQUALS expression PyC
    (5) var_assign -> LET . VARIABLE EQUALS VARIABLE

    VARIABLE        shift and go to state 10


state 9

    (7) expression -> OPERA OPEN_P . PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> OPERA OPEN_P . MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> OPERA OPEN_P . INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> OPERA OPEN_P . DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> OPERA OPEN_P . EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> OPERA OPEN_P . MULTIPLY COMMA expression COMMA expression CLOSE_P

    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    INT_DIV         shift and go to state 13
    DIVIDE          shift and go to state 14
    EXP             shift and go to state 15
    MULTIPLY        shift and go to state 16


state 10

    (4) var_assign -> LET VARIABLE . EQUALS expression PyC
    (5) var_assign -> LET VARIABLE . EQUALS VARIABLE

    EQUALS          shift and go to state 17


state 11

    (7) expression -> OPERA OPEN_P PLUS . COMMA expression COMMA expression CLOSE_P

    COMMA           shift and go to state 18


state 12

    (8) expression -> OPERA OPEN_P MINUS . COMMA expression COMMA expression CLOSE_P

    COMMA           shift and go to state 19


state 13

    (9) expression -> OPERA OPEN_P INT_DIV . COMMA expression COMMA expression CLOSE_P

    COMMA           shift and go to state 20


state 14

    (10) expression -> OPERA OPEN_P DIVIDE . COMMA expression COMMA expression CLOSE_P

    COMMA           shift and go to state 21


state 15

    (11) expression -> OPERA OPEN_P EXP . COMMA expression COMMA expression CLOSE_P

    COMMA           shift and go to state 22


state 16

    (12) expression -> OPERA OPEN_P MULTIPLY . COMMA expression COMMA expression CLOSE_P

    COMMA           shift and go to state 23


state 17

    (4) var_assign -> LET VARIABLE EQUALS . expression PyC
    (5) var_assign -> LET VARIABLE EQUALS . VARIABLE
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    VARIABLE        shift and go to state 24
    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 25

state 18

    (7) expression -> OPERA OPEN_P PLUS COMMA . expression COMMA expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 26

state 19

    (8) expression -> OPERA OPEN_P MINUS COMMA . expression COMMA expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 27

state 20

    (9) expression -> OPERA OPEN_P INT_DIV COMMA . expression COMMA expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 28

state 21

    (10) expression -> OPERA OPEN_P DIVIDE COMMA . expression COMMA expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 29

state 22

    (11) expression -> OPERA OPEN_P EXP COMMA . expression COMMA expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 30

state 23

    (12) expression -> OPERA OPEN_P MULTIPLY COMMA . expression COMMA expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 31

state 24

    (5) var_assign -> LET VARIABLE EQUALS VARIABLE .

    $end            reduce using rule 5 (var_assign -> LET VARIABLE EQUALS VARIABLE .)


state 25

    (4) var_assign -> LET VARIABLE EQUALS expression . PyC

    PyC             shift and go to state 32


state 26

    (7) expression -> OPERA OPEN_P PLUS COMMA expression . COMMA expression CLOSE_P

    COMMA           shift and go to state 33


state 27

    (8) expression -> OPERA OPEN_P MINUS COMMA expression . COMMA expression CLOSE_P

    COMMA           shift and go to state 34


state 28

    (9) expression -> OPERA OPEN_P INT_DIV COMMA expression . COMMA expression CLOSE_P

    COMMA           shift and go to state 35


state 29

    (10) expression -> OPERA OPEN_P DIVIDE COMMA expression . COMMA expression CLOSE_P

    COMMA           shift and go to state 36


state 30

    (11) expression -> OPERA OPEN_P EXP COMMA expression . COMMA expression CLOSE_P

    COMMA           shift and go to state 37


state 31

    (12) expression -> OPERA OPEN_P MULTIPLY COMMA expression . COMMA expression CLOSE_P

    COMMA           shift and go to state 38


state 32

    (4) var_assign -> LET VARIABLE EQUALS expression PyC .

    $end            reduce using rule 4 (var_assign -> LET VARIABLE EQUALS expression PyC .)


state 33

    (7) expression -> OPERA OPEN_P PLUS COMMA expression COMMA . expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 39

state 34

    (8) expression -> OPERA OPEN_P MINUS COMMA expression COMMA . expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 40

state 35

    (9) expression -> OPERA OPEN_P INT_DIV COMMA expression COMMA . expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 41

state 36

    (10) expression -> OPERA OPEN_P DIVIDE COMMA expression COMMA . expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 42

state 37

    (11) expression -> OPERA OPEN_P EXP COMMA expression COMMA . expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 43

state 38

    (12) expression -> OPERA OPEN_P MULTIPLY COMMA expression COMMA . expression CLOSE_P
    (7) expression -> . OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P
    (8) expression -> . OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P
    (9) expression -> . OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P
    (10) expression -> . OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P
    (11) expression -> . OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P
    (12) expression -> . OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P
    (13) expression -> . INT
    (14) expression -> . BOOLEAN

    OPERA           shift and go to state 5
    INT             shift and go to state 6
    BOOLEAN         shift and go to state 7

    expression                     shift and go to state 44

state 39

    (7) expression -> OPERA OPEN_P PLUS COMMA expression COMMA expression . CLOSE_P

    CLOSE_P         shift and go to state 45


state 40

    (8) expression -> OPERA OPEN_P MINUS COMMA expression COMMA expression . CLOSE_P

    CLOSE_P         shift and go to state 46


state 41

    (9) expression -> OPERA OPEN_P INT_DIV COMMA expression COMMA expression . CLOSE_P

    CLOSE_P         shift and go to state 47


state 42

    (10) expression -> OPERA OPEN_P DIVIDE COMMA expression COMMA expression . CLOSE_P

    CLOSE_P         shift and go to state 48


state 43

    (11) expression -> OPERA OPEN_P EXP COMMA expression COMMA expression . CLOSE_P

    CLOSE_P         shift and go to state 49


state 44

    (12) expression -> OPERA OPEN_P MULTIPLY COMMA expression COMMA expression . CLOSE_P

    CLOSE_P         shift and go to state 50


state 45

    (7) expression -> OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P .

    $end            reduce using rule 7 (expression -> OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P .)
    PyC             reduce using rule 7 (expression -> OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P .)
    COMMA           reduce using rule 7 (expression -> OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P .)
    CLOSE_P         reduce using rule 7 (expression -> OPERA OPEN_P PLUS COMMA expression COMMA expression CLOSE_P .)


state 46

    (8) expression -> OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P .

    $end            reduce using rule 8 (expression -> OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P .)
    PyC             reduce using rule 8 (expression -> OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P .)
    COMMA           reduce using rule 8 (expression -> OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P .)
    CLOSE_P         reduce using rule 8 (expression -> OPERA OPEN_P MINUS COMMA expression COMMA expression CLOSE_P .)


state 47

    (9) expression -> OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P .

    $end            reduce using rule 9 (expression -> OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P .)
    PyC             reduce using rule 9 (expression -> OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P .)
    COMMA           reduce using rule 9 (expression -> OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P .)
    CLOSE_P         reduce using rule 9 (expression -> OPERA OPEN_P INT_DIV COMMA expression COMMA expression CLOSE_P .)


state 48

    (10) expression -> OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P .

    $end            reduce using rule 10 (expression -> OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P .)
    PyC             reduce using rule 10 (expression -> OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P .)
    COMMA           reduce using rule 10 (expression -> OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P .)
    CLOSE_P         reduce using rule 10 (expression -> OPERA OPEN_P DIVIDE COMMA expression COMMA expression CLOSE_P .)


state 49

    (11) expression -> OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P .

    $end            reduce using rule 11 (expression -> OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P .)
    PyC             reduce using rule 11 (expression -> OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P .)
    COMMA           reduce using rule 11 (expression -> OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P .)
    CLOSE_P         reduce using rule 11 (expression -> OPERA OPEN_P EXP COMMA expression COMMA expression CLOSE_P .)


state 50

    (12) expression -> OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P .

    $end            reduce using rule 12 (expression -> OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P .)
    PyC             reduce using rule 12 (expression -> OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P .)
    COMMA           reduce using rule 12 (expression -> OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P .)
    CLOSE_P         reduce using rule 12 (expression -> OPERA OPEN_P MULTIPLY COMMA expression COMMA expression CLOSE_P .)

